# ziggo_network_device_names

./: .gitignore  README.md  devices.example.csv  pyproject.toml
src/network_device_names/: __init__.py  config.example.py
