[tool.poetry]
name = "network_device_names"
version = "0.1.0"
description = ""
authors = ["kvanzuijlen <8818390+kvanzuijlen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
